--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="lights">
+		<div id="green"></div>
+		<div id="yellow"></div>
+		<div id="red"></div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
