--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="lights">
-		<div id="green"></div>
-		<div id="yellow"></div>
-		<div id="red"></div>
+	<div class="container">
+		<div class="green"></div>
+		<div class="yellow"></div>
+		<div class="red"></div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
